# Object-oriented_programming_FMI_2021-2022

./: README.md  Устен изпит - Теми.txt
Additional/Teams/: Niki.txt  hello.txt
Additional/Teams/Team 3/: README.md
Additional/Teams/Team 5/: Clothing_shop.md
Additional/Teams/Team 6/: README.md
Additional/Teams/Team 7/: HippopotamusFacts.txt  TurtleFacts.txt
Additional/Teams/Team-13/: CMakeLists.txt  ColdMeal.cpp  ColdMeal.h  Documentation  HotMeal.cpp  HotMeal.h  Idea of the project.md  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h  String.cpp  String.h  Type.cpp  Vector.hpp
Additional/Teams/Team-13/src/cpp/: ColdMeal.cpp  HotMeal.cpp  Recipe.cpp  RecipeBook.cpp  RecipeBookMain.cpp  String.cpp  Type.cpp
Additional/Teams/Team-13/src/hpp/: ColdMeal.h  HotMeal.h  Recipe.h  RecipeBook.h  String.h  Type.h  Vector.hpp
Additional/Teams/Team-14/: README.md
Additional/Teams/Team-15/: data.txt
Additional/Teams/Team-8/: README.md
Additional/Teams/Team12/: README.md  main.cpp
Additional/Teams/Team14/: ProjectOOPTeam14.sln  README.md
Additional/Teams/Team15 -RentHouse/: README.md
Additional/Teams/Team7/: Animal.cpp  Animal.h  Array.h  Hippopotamus.cpp  Hippopotamus.h  Penguin.cpp  Penguin.h  PenguinFacts.txt  README.md  (+7 more)
Sem. 02/: task1.cpp
Sem. 11/: README.md
Sem. 12/: README.md
Sem. 13/: README.md
Sem. 14/SOLID principles/: README.md
Sem. 14/Type casting/: README.md
Sem. 15/: README.md
Sem. 15/Behavioral Patterns/: README.md
Sem. 15/Creational Patterns/: README.md
Sem. 15/Structural Patterns/: README.md
Team15 -RentHouse/: main.cpp
(+301 files in other folders)
